--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,33 @@
-/.phpunit.cache
+# Laravel environment files
+.env
+.env.backup
+.env.production
+.envrc
+
+# Node & PHP dependencies
 /node_modules
+/vendor
+
+# Laravel generated
 /public/build
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
-.env
-.env.backup
-.env.production
-.phpactor.json
+/.phpunit.cache
 .phpunit.result.cache
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
+
+# IDE/editor configs
 /.idea
 /.vscode
 /.zed
+/.fleet
+
+# Homestead
+Homestead.json
+Homestead.yaml
+
+# Logs and misc
+auth.json
+npm-debug.log
+yarn-error.log
+.phpactor.json
