--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.10",
+        "@vitejs/plugin-react": "^4.5.2",
+        "tailwindcss": "^4.1.10",
+        "vite-plugin-pwa": "^1.0.0"
     }
 }
